tests/baselines/reference/moduleAugmentatioNoNewNames.errors.txt
tests/cases/compiler/map.ts(10,11): error TS2661: Module augmentation cannot introduce new names in the top level scope.
tests/cases/compiler/map.ts(11,9): error TS2661: Module augmentation cannot introduce new names in the top level scope.


==== tests/cases/compiler/map.ts (2 errors) ====
    
    import { Observable } from "./observable"
    
    (<any>Observable.prototype).map = function() { }
    
    declare module "./observable" {
        interface Observable<T> {
            map<U>(proj: (e:T) => U): Observable<U>
        }
        class Bar {}
              ~~~
!!! error TS2661: Module augmentation cannot introduce new names in the top level scope.
        let y: number;
            ~
!!! error TS2661: Module augmentation cannot introduce new names in the top level scope.
    }
    
==== tests/cases/compiler/observable.ts (0 errors) ====
    export declare class Observable<T> {
        filter(pred: (e:T) => boolean): Observable<T>;
    }
    
==== tests/cases/compiler/main.ts (0 errors) ====
    import { Observable } from "./observable"
    import "./map";
    
    let x: Observable<number>;
    let y = x.map(x => x + 1);